--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -142,14 +142,19 @@ body {
   height: 10px;
   width: 100%;
   overflow: hidden;
+  position: relative;
   &__container {
     display: flex;
     justify-content: center;
     width: 100%;
   }
   &__progress {
+    position: absolute;
     background: #355585;
     height: 10px;
     width: 0px;
+  }
+  &__text {
+    font-size: 8px;
   }
 }
