--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -2,11 +2,14 @@
 $fa-font-path: '~font-awesome/fonts';
 @import '~font-awesome/scss/font-awesome';
 
+.fa {
+  -webkit-font-smoothing: subpixel-antialiased;
+}
 .fa-sm {
   transform: scale(0.75);
 }
 
-* {
+*, *:before, *:after {
   box-sizing: border-box;
 }
 
@@ -20,297 +23,11 @@ body {
   letter-spacing: 0.1rem;
 }
 
-.app {
-  display: flex;
-  flex-direction: column;
-  transition: 0.5s opacity;
-  height: 100vh;
+select, input, textarea {
+  font-family: inherit;
+  font-size: 14px;
 }
 
-.app__body {
-  display: flex;
-  flex: 1;
-}
-
-.app__component {
-  flex: 0 auto;
-  transition: width 150ms linear;
-
-  &.body-transition-enter {
-    width: 0;
-  }
-
-  &.body-transition-leave-active {
-    width: 0 !important;
-  }
-}
-
-.header {
-  display: flex;
-  height: 50px;
-  background: #355585;
-  color: #fff;
-}
-
-.tabs {
-  display: flex;
-
-  &__tab {
-    display: flex;
-    border-right: 1px solid #526E9D;
-    padding: 0 10px;
-    &__text {
-      font-weight: 200;
-      margin: auto;
-    }
-    &__meta {
-      position: relative;
-      font-size: 10px;
-      top: -2px;
-    }
-    &--active {
-      background: #526E9D;
-    }
-  }
-}
-
-.sidebar {
-  background: #355585;
-  color: #fff;
-  &__list {
-    display: flex;
-    flex-direction: column;
-    flex: 1 1 auto;
-  }
-  &__item {
-    flex: 0 1 50px;
-    background: rgba(255, 255, 255, 0.05);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    width: 50px;
-    line-height: 50px;
-    cursor: pointer;
-    &:hover {
-      background: rgba(255, 255, 255, 0.1);
-    }
-  }
-}
-
-.torrent-list {
-  table-layout: fixed;
-  width: 100%;
-  &__item {
-    cursor: pointer;
-    opacity: 1;
-    transition: 0.5s opacity;
-    &:hover {
-      background: #fcfcfc;
-    }
-  }
-  &__item, &__head {
-    border-bottom: 1px solid #efefef;
-    height: 50px;
-    line-height: 50px;
-
-    &--active {
-      background: #f8f8f8;
-    }
-  }
-  &__head {
-    border-bottom: 1px solid #eee;
-  }
-
-  &__status {
-    margin-right: 10px;
-  }
-  &__data {
-    color: #8f8f8f;
-    padding: 0 10px;
-    text-align: center;
-
-    &--title {
-      text-align: left;
-      padding-left: 20px;
-      color: #444;
-      font-weight: bold;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      &:hover {
-        position: absolute;
-        z-index: 5;
-        background: #fff;
-      }
-    }
-  }
-}
-
-.torrent-info {
-  &__container {
-    background: #fafafa;
-    height: 100vh;
-  }
-  &__actions {
-    padding: 5%;
-  }
-  &__action {
-    width: 23%;
-    margin: 0 1%;
-  }
-
-  &__details {
-    display: table;
-    table-layout: fixed;
-  }
-
-  &__data {
-    margin: 15px;
-    display: table;
-    font-size: 14px;
-    &--half {
-      display: table-cell;
-      padding-right: 10px;
-    }
-  }
-
-  &__key, &__value {
-    display: table-cell;
-  }
-
-  &__key {
-    color: #aaa;
-  }
-  &__value {
-    padding-left: 10px;
-    &--monospace {
-      font-family: Menlo, 'Lucida Console', 'Courier New', monospace;
-    }
-  }
-
-}
-
-.progress {
-  line-height: 1;
-  position: relative;
-  font-size: 10px;
-  height: 10px;
-  &__bar {
-    border-radius: 15px;
-    background: #eee;
-    overflow: hidden;
-    height: 100%;
-    &__progress {
-      background: #355385;
-      height: 100%;
-    }
-  }
-
-  &__text {
-    &__container {
-      position: absolute;
-      left: 0;
-      right: 0;
-      top: 13px;
-    }
-  }
-}
-
-.modal {
-  background: #fff;
-  border: 1px solid #eee;
-  flex: 0 1 25%;
-  position: relative;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
-  transition: 200ms all;
-  &__container {
-    background: rgba(0, 0, 0, 0.4);
-    position: fixed;
-    display: flex;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    z-index: 1;
-    transition: 200ms all;
-    opacity: 1;
-
-    &.app-transition-enter, &.app-transition-leave-active {
-      opacity: 0;
-
-      & .modal {
-        transform: scale(0);
-      }
-    }
-    &.app-transition-enter-active {
-      opacity: 1;
-      & .modal {
-        transform: scale(1);
-      }
-    }
-  }
-
-  &__title {
-    background: #efefef;
-    color: #888;
-    letter-spacing: initial;
-    padding: 10px;
-    border-bottom: 1px solid #ddd;
-    text-transform: uppercase;
-    text-align: center;
-  }
-
-  &__body {
-    padding: 10px;
-    border-bottom: 1px solid #eee;
-    min-height: 200px;
-  }
-
-  &__footer {
-    padding: 10px;
-  }
-
-  &--torrent {
-    position: relative;
-        &__filename {
-      position: absolute;
-      text-align: center;
-      width: 100%;
-      top: 100px;
-      transform: translateY(-50%);
-      font-weight: 200;
-      color: #bbb;
-    }
-    &__file {
-      display: block;
-      width: 100%;
-      height: 200px;
-      position: relative;
-      visibility: hidden;
-      &:after {
-        content: '';
-        font-family: 'Lato', sans-serif;
-        position: absolute;
-        outline: 3px dashed #ddd;
-        display: block;
-        width: 100%;
-        visibility: visible;
-        height: 200px;
-        line-height: 200px;
-        font-size: 20px;
-        color: #ccc;
-        top: 0;
-      }
-
-      & + .button {
-        margin-top: 15px;
-        width: 100%;
-      }
-    }
-  }
-}
 
 .button {
   -webkit-appearance: none;
@@ -329,48 +46,30 @@ body {
   }
 }
 
-.icon {
-  color: #666;
-  transition: 0.2s color, 0.2s transform linear;
-  transform: rotate(0deg);
-  &--downloading {
-    color: #355385;
-    transition: 0.2s color, 0.2s transform linear;
-    transform: rotate(360deg);
-  }
-  &--uploading {
-    color: #3CA337;
-    transition: 0.2s color, 0.2s transform linear;
-    transform: rotate(360deg);
-  }
-  &--checking {
-    color: #C99943;
-    transition: 0.2s color, 0.2s transform linear;
-    transform: rotate(360deg);
-  }
-}
-
-.--nowidth {
-  width: 0 !important;
-}
-
-.--noopacity {
-  opacity: 0 !important;
-}
-
-.footer {
-  background: #fafafa;
-  border-top: 1px solid #eee;
-  color: #aaa;
-  font-size: 12px;
-  padding: 10px;
-
-  &__info-item {
+.input {
+  width: 100%;
+  &__group {
+    width: 44%;
+    margin: 3%;
     float: left;
-    &:not(:last-child) {
-      margin-right: 10px;
-      padding-right: 10px;
-      border-right: 1px solid #ccc;
+    &--full {
+      width: 94%;
     }
   }
+  &__row {
+    overflow: hidden;
+  }
+  &__label {
+    display: block;
+    margin-bottom: 5px;
+  }
+  &--text {
+    padding: 10px;
+  }
+  &--select {
+    background: #fff;
+    border: 1px solid #ddd;
+    height: 40px;
+  }
 }
+
