--- a/assets/js/components/Torrent/styles/TorrentInfo.scss
+++ b/assets/js/components/Torrent/styles/TorrentInfo.scss
@@ -66,5 +66,15 @@
       font-family: Menlo, 'Lucida Console', 'Courier New', monospace;
     }
   }
+  &__download {
+    &__link {
+      border: 1px solid #ddd;
+      padding: 5px;
+      margin-right: 10px;
+      &:hover {
+        background: #eee;
+      }
+    }
+  }
 
 }
