improves dnd torrent addition

--- a/assets/js/containers/styles/Body.scss
+++ b/assets/js/containers/styles/Body.scss
@@ -1,5 +1,11 @@
 .app__body {
   display: flex;
   flex: 1;
+  opacity: 1;
+
+  &--drop-active {
+    opacity: 0.9;
+    transition: 200ms opacity;
+  }
 }
 
