--- a/assets/js/components/Credentials/styles/Credentials.scss
+++ b/assets/js/components/Credentials/styles/Credentials.scss
@@ -1,3 +1,9 @@
 .credentials {
-  letter-spacing: initial;
+  margin: 1.5em auto;
+  width: 60%;
+  &__submit {
+    display: block;
+    margin: auto;
+    margin-top: 1em;
+  }
 }
