--- a/assets/js/components/Footer/styles/Footer.scss
+++ b/assets/js/components/Footer/styles/Footer.scss
@@ -1,29 +1,20 @@
+@import '../../../../scss/colors';
+@import '../../../../scss/mixins';
+
 .footer {
-  background: #fafafa;
-  border-top: 1px solid #eee;
-  color: #aaa;
-  font-size: 12px;
+  @include one-line-rules(2.5em);
+
+  background: $serene-lighter;
+  border-top: 1px solid $serene-light;
+  color: $serene-dark;
+  font-size: 0.8rem;
   position: relative;
-  line-height: 30px;
 
   &__actions {
     &-list {
-      color: #444;
+      @include react-transition(translateX(-100%), translateX(0%), 'footer');
+      color: $serene-darkest;
       float: left;
-      &.footer-transition-enter, &.footer-transition-leave-active {
-        transform: translateX(-100%);
-      }
-      &.footer-transition-leave {
-        transform: translateX(0);
-      }
-      &.footer-transition-leave-active {
-        transition: all 200ms ease-in-out;
-        transform: translateX(-100%);
-      }
-      &.footer-transition-enter-active {
-        transition: all 200ms ease-in-out;
-        transform: translateX(0);
-      }
     }
     &-item {
       float: left;
