--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -2,74 +2,67 @@
 $fa-font-path: '~font-awesome/fonts';
 @import '~font-awesome/scss/font-awesome';
 
-.fa {
-  -webkit-font-smoothing: subpixel-antialiased;
-}
-.fa-sm {
-  transform: scale(0.75);
+@import 'colors';
+@import 'mixins';
+
+// Font Awesome overrides + helpers
+.fa { -webkit-font-smoothing: subpixel-antialiased; }
+.fa-sm { transform: scale(0.75); }
+
+// App rules
+:root {
+  font-family: Lato, sans-serif;
+  color: $serene-copy;
 }
 
-*, *:before, *:after {
-  box-sizing: border-box;
-}
+*, *:before, *:after { box-sizing: border-box }
 
 a, a:link, a:visited, a:focus, a:hover {
   color: inherit;
   text-decoration: none;
 }
 
-body {
-  font-family: Lato, sans-serif;
-  letter-spacing: 0.1rem;
+select, input, textarea, button {
+  font: inherit;
+  outline: none;
 }
 
-select, input, textarea {
-  font-family: inherit;
-  font-size: 14px;
+input:-webkit-autofill {
+  box-shadow: 0 0 0 500px #fff inset;
 }
 
-
-.button {
+// Disable all browser / user-agent <button> styles
+button {
   -webkit-appearance: none;
   appearance: none;
-  border: 1px solid #ddd;
+  background: 0;
+  border: 0;
+  color: $serene-primary-cta;
+}
+
+// Basic blocks
+.button {
+  @include darken-color-on-hover($serene-primary-cta);
+
   cursor: pointer;
-  background: #eee;
-  padding: 10px;
-  text-transform: uppercase;
-  font-size: 12px;
-  font-family: 'Lato', sans-serif;
-  color: #aaa;
-  font-weight: 200;
-  &:hover {
-    background: #e6e6e6;
-  }
+  padding: 1rem;
 }
 
 .input {
-  width: 100%;
-  &__group {
-    width: 44%;
-    margin: 3%;
-    float: left;
-    &--full {
-      width: 94%;
-    }
-  }
-  &__row {
-    overflow: hidden;
-  }
+  $label-width: 30%;
+  @include one-line-rules(3em);
+
+  border-bottom: 1px solid $serene-light;
+  font-size: 0.8em;
+  overflow: hidden;
   &__label {
     display: block;
-    margin-bottom: 5px;
+    float: left;
+    width: $label-width;
   }
-  &--text {
-    padding: 10px;
-  }
-  &--select {
-    background: #fff;
-    border: 1px solid #ddd;
-    height: 40px;
+  &__field {
+    border: 0;
+    line-height: initial;
+    width: 100% - $label-width;
   }
 }
-
