--- a/assets/components/Sidebar/styles/SidebarItem.scss
+++ b/assets/components/Sidebar/styles/SidebarItem.scss
@@ -1,13 +1,13 @@
 .sidebar__item {
-  flex: 0 1 50px;
-  background: rgba(255, 255, 255, 0.05);
+  $sidebar-size: 3.125rem;
+  flex: 0 1 $sidebar-size;
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  width: 50px;
-  line-height: 50px;
+  width: $sidebar-size;
+  line-height: $sidebar-size;
   cursor: pointer;
   &:hover {
     background: rgba(255, 255, 255, 0.1);
