--- a/assets/components/Torrent/styles/TorrentList.scss
+++ b/assets/components/Torrent/styles/TorrentList.scss
@@ -1,82 +1,79 @@
+@import '~styles/colors';
+@import '~styles/mixins';
+
 .torrent-list {
+  $status-width: 8%;
+
   table-layout: fixed;
   width: 100%;
   &__container {
     min-width: 700px;
     overflow: scroll;
-
   }
+
+  &__item, &__head {
+    @include one-line-rules(3em);
+
+    border-bottom: 1px solid lighten($serene-light, 5%);
+
+    &--active { background: $serene-lighter; }
+  }
+
   &__item {
     cursor: pointer;
-    opacity: 1;
     position: relative;
-    transition: 0.5s opacity;
-    &:hover {
-      background: #fcfcfc;
-    }
-  }
-  &__item, &__head {
-    border-bottom: 1px solid #efefef;
-    height: 40px;
-    line-height: 40px;
 
-    &--active {
-      background: #f8f8f8;
-    }
+    &:hover { background: $serene-lighter; }
   }
   &__head {
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid $serene-light;
+
     &__item {
       cursor: pointer;
-      &:hover {
-        background: #fafafa;
-      }
-      &--title {
-        width: 25%;
-      }
+
+      &:hover { background: #fafafa; }
+      &--title { width: 25%; }
     }
   }
 
   &__status {
-    margin-right: 10px;
+    width: $status-width;
+    margin-right: 0.5em;
   }
+
   &__meta {
+    @include one-line-ellipsis-truncate;
+
     display: inline-block;
     vertical-align: middle;
     line-height: initial;
-    &__list {
-      color: #aaa;
-      font-weight: 200;
-      font-size: 12px;
-    }
-    &__title {
-      letter-spacing: initial;
-      font-weight: normal;
-      font-size: 16px;
-    }
+    width: 100% - $status-width;
+
     &__item {
       float: left;
+      font-size: 0.8em;
+      font-weight: 300;
+      letter-spacing: 0.1em;
+      color: $serene-dark;
+
       &:not(:last-child):after {
         content: '\2022';
-        margin: 0 4px;
+        margin: 0 .2em;
       }
     }
   }
   &__data {
-    color: #8f8f8f;
-    padding: 0 10px;
+    color: $serene-dark;
+    padding: 0 .5em;
     position: relative;
     text-align: center;
-    font-size: 14px;
 
     &--title {
-      text-align: left;
-      padding-left: 20px;
-      color: #444;
+      color: $serene-copy;
       font-weight: bold;
+      padding-left: 1em;
+      text-align: left;
       white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
     }
   }
 }
