--- a/assets/styles/colors.scss
+++ b/assets/styles/colors.scss
@@ -5,6 +5,7 @@ $serene-yellow: #C99943;
 $serene-copy: #353535;
 
 $serene-primary: $serene-blue !default;
+$serene-primary-highlighted: hsl(hue($serene-primary), 75%, 50%) !default;
 $serene-primary-cta: hsl(hue($serene-primary), 100%, 50%) !default;
 
 $serene-success: $serene-green !default;
