--- a/assets/styles/colors.scss
+++ b/assets/styles/colors.scss
@@ -13,7 +13,7 @@ $serene-warning: $serene-yellow !default;
 
 $serene-lightest: #fefefe;
 $serene-lighter: #fafafa;
-$serene-light: #ddd;
+$serene-light: #eee;
 $serene-dark: #aaa;
 $serene-darker: #666;
 $serene-darkest: $serene-copy;
