--- a/assets/containers/styles/Body.scss
+++ b/assets/containers/styles/Body.scss
@@ -5,7 +5,11 @@
 
   &--drop-active {
     opacity: 0.9;
-    transition: 200ms opacity;
+
+    & .torrent-list__container {
+      transition: 200ms transform;
+      transform: scale(0.99);
+    }
   }
 }
 
