--- a/assets/components/Header/styles/Header.scss
+++ b/assets/components/Header/styles/Header.scss
@@ -17,7 +17,7 @@
     cursor: pointer;
     float: left;
     font-size: 1.5em;
-    font-weight: 700;
+    font-weight: bold;
     margin-right: 0.8em;
   }
   &__caret {
