--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -2,6 +2,7 @@
 $fa-font-path: '~font-awesome/fonts';
 @import '~font-awesome/scss/font-awesome';
 
+@import '~fonts/stylesheet.css';
 @import 'colors';
 @import 'mixins';
 
