adds error msg for connection errors

--- a/assets/components/Credentials/styles/Credentials.scss
+++ b/assets/components/Credentials/styles/Credentials.scss
@@ -6,6 +6,12 @@
     margin: auto;
     margin-top: 1em;
   }
+
+  &__error {
+    display: block;
+    text-align: center;
+    margin: 1em 0;
+  }
 }
 
 .modal.modal--connection {
